add youtube link as report

--- a/flask/templates2/main/aggregation.html
+++ b/flask/templates2/main/aggregation.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aggregation Results</title>
-    <style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/aggregations.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/aggregation.css') }}">
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -81,7 +83,7 @@
     background-color: #0056b3;
 }
 
-    </style>
+    </style> -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/aggregations.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/aggregation.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
